[tool.poetry]
name = "sound-roi-detector"
version = "0.1.0"
description = ""
authors = ["Clea Parcerisas"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
ultralytics = "8.0.222"
umap-learn = "^0.5.6"
transformers = "^4.41.0"
soundfile = "^0.12.1"
librosa = "^0.10.2.post1"
hdbscan = "^0.8.33"
torchaudio = "^2.3.0"
noisereduce = "^3.0.2"
suntime = "^1.3.2"
tensorboard = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
